# IGNExplorer

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ArchiveExtractor.cpp  ArchiveExtractor.h  CMakeLists.txt  ImageWorker.cpp  ImageWorker.h  Interface.cpp  Interface.h  ProgressStatus.cpp  ProgressStatus.h  TileGeometry.cpp  TileGeometry.h  TileRecord.cpp  TileRecord.h  ctpl_stl.h  native-lib.cpp  native-lib.h
app/src/main/java/fr/desfrene/ignexplorer/: ArchiveActivity.java  MainActivity.java
app/src/main/java/fr/desfrene/ignexplorer/ignutils/: ArchiveParser.java  LambertCoordinates.java  MapNode.java  MapNodeSaver.java  MapSaver.java  MapTile.java  ProgressStatus.java  TileGeometry.java
app/src/main/java/fr/desfrene/ignexplorer/viewutils/: MapView.java  ViewPort.java
app/src/main/res/layout/: activity_archive.xml  activity_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
